src/yini_test/cases/golden/lenient/valid/sections/section-backticked-name.yini
@yini

^ `Section With Spaces`
name = "lenient-backticked-name"
enabled = true
