src/yini_test/cases/golden/lenient/invalid/sections/section-marker-separator-adjacent-underscores.yini
@yini

^__^ Section
value = true
